tests/invalid/compare_incompatible_types/main.py
x: str = "hello"
y: bool = x == 5
